加入年齡欄位

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
         <item>女生</item>
     </string-array>
     <string name="ok">確定</string>
+    <string name="no_hurry">不急</string>
+    <string name="find_couple">找對象</string>
+    <string name="get_married">趕快結婚</string>
+    <string name="hint_age">年齡</string>
 </resources>
